# iwantobuyps5

./: .env.example  .eslintrc.js  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
@types/: node.d.ts
scripts/: build.js
src/: main.rs  main.ts  secrets.rs  store.rs
src/store/: amazon.ts  base.ts
src/utils/: bunyan.js  index.ts
